# Nation-building-simulation-RPG

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: stage-a-ci.yml  stage-b-ci.yml  stage-c-ci.yml
Docs/: StageA_Design.md  StageA_Verification_Report.md  StageB_Design.md  StageB_Verification_Report.md  StageC_Design.md  StageC_Verification_Report.md  StageV0_Asset_Candidate_Matrix.md  StageV0_Visual_Asset_Requirements.md  StageV1_Asset_Acquisition_Checklist.md  StageV1_Asset_Validation_Record_Template.md  StageV1_Free_Asset_Validation_Design.md  StageV2_MainStreet_Geometry_PoC_Design.md  国家運営シミュレーションRPG_StageG-0_描画PoC実装指示書.md  国家運営シミュレーションRPG_最小MVP_設計実装指示書.md  国家運営シミュレーションRPG_王都・2.5Dビジュアル仕様書_v0.1.md
data/: stage_a_fixture.json  stage_parity_contract.json
include/nation_sim/: simulation.hpp  stage_f_runtime.hpp
src/: main.cpp  simulation.cpp  stage_f_runtime.cpp
stage-b/: Main.tscn  NationSimulation.StageB.csproj  project.godot
stage-b/src/: Main.cs  Main.cs.uid  Models.cs  Models.cs.uid  Simulation.cs  Simulation.cs.uid
stage-b/tests/: StageBAcceptance.cs  StageBAcceptance.cs.uid
stage-c/: NationSimulationStageC.uproject
stage-c/Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
stage-c/Config/Windows/: WindowsEngine.ini  WindowsInput.ini
stage-c/Content/Maps/: StageD_Capital.umap  StageG0_VisualPoC.umap  StageG1B_OriginalPlayerPoC.umap  StageG1_3DCharacterPoC.umap  StageG2A_CameraRedesignPoC.umap  StageG2B_GuardM_PoC.umap  StageG3A_CapitalBlockout_PoC.umap  StageG3B_ModularCastle_PoC.umap
stage-c/Content/StageG2A/CameraRedesign/Blueprints/: BP_StageG2A_CameraModeAdapter.uasset
stage-c/Content/StageG3A/CapitalBlockout/Materials/: MI_G3A_Banner.uasset  MI_G3A_CanopyGold.uasset  MI_G3A_Door.uasset  MI_G3A_Earth.uasset  MI_G3A_Farmland.uasset  MI_G3A_Forest.uasset  MI_G3A_Grass.uasset  MI_G3A_Magic.uasset  MI_G3A_Plaster.uasset  MI_G3A_PlasterWarm.uasset  MI_G3A_Road.uasset  MI_G3A_RoadDark.uasset  MI_G3A_RoofBrown.uasset  MI_G3A_RoofSlate.uasset  MI_G3A_RoofTerracotta.uasset  MI_G3A_Stone.uasset  MI_G3A_StoneDark.uasset  MI_G3A_StoneLight.uasset  MI_G3A_Timber.uasset  MI_G3A_Window.uasset  M_G3A_Blockout_Master.uasset
stage-c/Content/StageG3B/ModularCastle/Materials/: MI_G3BR_BannerRoyal.uasset  MI_G3BR_GateShadow.uasset  MI_G3BR_Magic.uasset  MI_G3BR_Metal.uasset  MI_G3BR_PlazaStone.uasset  MI_G3BR_RoofSlate.uasset  MI_G3BR_StoneAccent.uasset  MI_G3BR_StoneLight.uasset  MI_G3BR_StoneMain.uasset  MI_G3BR_WindowDeepBlue.uasset  M_G3BR_ModularCastle_Master.uasset
stage-c/Content/StageG3B/ModularCastle/Meshes/: SM_G3BR_BannerCloth.uasset  SM_G3BR_BannerPole.uasset  SM_G3BR_ButtressStepped.uasset  SM_G3BR_CentralSpire_640.uasset  SM_G3BR_CentralTower_520.uasset  SM_G3BR_CornerSpire_220.uasset  SM_G3BR_CornerTurret_180.uasset  SM_G3BR_Crenellation_300.uasset  SM_G3BR_EntranceStair.uasset  SM_G3BR_GateArch_600.uasset  SM_G3BR_MagicCrystal.uasset  SM_G3BR_MagicPlinth.uasset  SM_G3BR_RoofBaySteep_320.uasset  SM_G3BR_RoofCentral_680.uasset  SM_G3BR_SideSpire_500.uasset  SM_G3BR_SideTower_400.uasset  SM_G3BR_TunnelRoof.uasset  SM_G3BR_TunnelWall.uasset  SM_G3BR_WallBayTall_300.uasset  SM_G3BR_WallBay_300.uasset  SM_G3BR_WindowFramePointed.uasset  SM_G3BR_WindowInsetPointed.uasset
stage-c/Content/StageV1/Maps/: StageV1_AssetValidation_PoC.umap
stage-c/Data/StageE/: stage_e_state_definitions.json
stage-c/Data/StageF/: stage_f_generation_config.json  stage_f_hash_contract.json  stage_f_pack_schema.json  stage_f_save_schema.json  stage_f_state_shard_schema.json
stage-c/Docs/: StageD_Design.md  StageD_Manual_Verification_Checklist.md  StageD_Verification_Report.md  StageD_操作方法.md  StageE_Design.md  StageE_Save_Design.md  StageE_Verification_Report.md  StageF_Data_Pack_Design.md  StageF_Design.md  StageF_Performance_Report.md  StageF_Save_Recovery_Design.md  StageF_Verification_Report.md  StageG0_Asset_Contract.md  StageG0_Design.md  StageG0_Manual_Verification_Checklist.md  StageG0_Verification_Report.md  StageG1A_3D_Character_Manual_Checklist.md  StageG1A_3D_Character_PoC_Design.md  StageG1A_3D_Character_PoC_Verification_Report.md  StageG1B_Meshy_PLAYER_M_Import_Design.md  StageG1B_Meshy_PLAYER_M_Manual_Checklist.md  StageG1B_Meshy_PLAYER_M_Verification_Report.md  StageG2A_Camera_Redesign_Design.md  StageG2A_Camera_Redesign_Manual_Checklist.md  StageG2A_Camera_Redesign_Verification_Report.md  StageG2B_GuardM_Import_Design.md  StageG2B_GuardM_Manual_Checklist.md  StageG2B_GuardM_Verification_Report.md  StageG3A_CapitalBlockout_Design.md  StageG3A_CapitalBlockout_Manual_Checklist.md  StageG3A_CapitalBlockout_Verification_Report.md  StageG3B_ModularCastle_Design.md  StageG3B_ModularCastle_Manual_Checklist.md  StageG3B_ModularCastle_Verification_Report.md  StageG3B_Rejected_PrimitiveCastle_Archive_Report.md
stage-c/Source/: NationSimulationStageC.Target.cs  NationSimulationStageCEditor.Target.cs
stage-c/Source/NationSimulationStageC/: NationSimulationStageC.Build.cs
stage-c/Source/NationSimulationStageC/Private/: NationSimulationStageC.cpp  StageCCoreBridge.cpp
stage-c/Source/NationSimulationStageC/Private/StageD/: NationSimulationGameInstanceSubsystem.cpp  StageDCoreBoundary.cpp  StageDGameMode.cpp  StageDHudWidget.cpp  StageDLocationVolume.cpp  StageDNpcActor.cpp  StageDPlayerCharacter.cpp  StageDSaveMetadata.cpp
stage-c/Source/NationSimulationStageC/Private/StageE/: StageESaveMigration.cpp  StageEValidatorBridge.cpp
stage-c/Source/NationSimulationStageC/Private/StageG0/: StageG0FangRatActor.cpp  StageG0TestSignActor.cpp  StageG0Types.cpp  StageG0VerificationPanel.cpp  StageG0WorldLabelWidget.cpp  (+1 more)
stage-c/Source/NationSimulationStageC/Public/: NationSimulationStageC.h
stage-c/Tools/: StageEStateValidator.cpp  StageEStateValidator.hpp  StageEStateValidatorMain.cpp  StageFDataPack.cpp  StageFDataPack.hpp  StageFScaleDataGeneratorMain.cpp  StageFValidatorMain.cpp
tests/: stage_f_acceptance.cpp  stage_f_performance.cpp  stage_f_validator_negative.cpp  test_main.cpp
tools/: generate_stage_a_fixture.cpp
(+188 files in other folders)
